# parrot

./: .gitignore  ARCHITECTURE.md  README.md  bot.py  cache.js  config.example.py  config.json.example  config.py  config.ts  corpus.js  defaults.js  embeds.js  eula.txt  exceptions.py  failure-phrases.txt  help.js  index.js  log.js  main.py  markov.js  package-lock.json  package.json  privacy-policy.md  privacy-policy.txt  pyproject.toml  requirements.txt  ruff.toml  s3.js  test.txt  tsconfig.json
assets/: __init__.py  image-rules.yaml  privacy-policy.txt  speakers.json
cogs/: chain_manager.py  corpus_manager.py  learning.py  model_manager.py  registration_manager.py  webhook_manager.py
commands/: admin.py  channels.py  data.py  download.py  imitate.py  misc.py  ping.py  policy.py  quickstart.py  registration.py  text.py  vocodes.py  voice_chat.py
database/: avatar_manager.py  corpus_manager.py  redis_set.py
events/: command_error.py  message.py  raw_message_delete.py  raw_message_edit.py  ready.py  voice_state_update.py
parrot/: alembic.ini  bot.py  config.js  config.template.py  corpus.js  defaults.js  embeds.js  expirable-set.js  help.js  learning.js  main.py  markov.js  regex.js  s3.js  tracker-set.js
schism/: config.js  corpus.js  defaults.js  embeds.js  help.js  learning.js  markov.js  regex.js  s3.js  scrape.js
src/: app.ts  config.template.ts  defaults.ts  index.d.ts
utils/: Paginator.py  __init__.py  asyncio_run.py  channel_crawler.py  checks.py  converters.py  disk_set.py  exceptions.py  executor_function.py  fetch_webhook.py  gibberish.py  history_crawler.py  image.py  lru_cache.py  misc.py  parrot_embed.py  (+10 more)
(+136 files in other folders)
