[tool.poetry]
name = "parrot"
version = "3.2.0"
description = ""
authors = ["Nate <14845347+garlic-os@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.4.0"
jishaku = "^2.6.0"
markovify = "^0.9.4"
Pillow = "^11.0.0"
PyYAML = "^6.0.2"
asyncio-atexit = "^1.0.1"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
