[project]
name = "parrot"
version = "2.0.0"
description = "Discord Markov bot that can imitate everyone individually"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-atexit>=1.0.1",
    "discord-py>=2.4.0",
    "jishaku>=2.6.0",
    "markovify>=0.9.4",
    "pillow>=11.0.0",
    "pydantic-settings>=2.7.0",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
