[project]
name = "parrot"
version = "2.0.0"
description = "Discord Markov bot that can imitate everyone individually"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.10",
    "alembic>=1.14.1",
    "asyncio-atexit>=1.0.1",
    "audioop-lts>=0.2.1",
    "discord-py>=2.4.0",
    "jishaku>=2.6.0",
    "markovify>=0.9.4",
    "pillow>=11.1.0",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "ujson>=5.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
migrations = [
    "pytz>=2024.2",
    "tqdm>=4.67.1",
]
